51/ingress.yml
apiVersion: v1
kind: Service
metadata: 
    name: web-svc
spec:
    selector:
        app: web
        env: study
    ports:
    - port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
        app: web
        env: study
  template:
    metadata:
        name: nginx
        labels: 
          app: web
          env: study
    spec:
        containers: 
        - name: nginx
          image: nginx:1.17.2-alpine

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: frontend
spec:
    rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: web-svc
            servicePort: 80

# < kubectl get ing,svc,deploy
# NAME                          HOSTS   ADDRESS   PORTS   AGE
# ingress.extensions/frontend   *                 80      35s

# NAME                 TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)   AGE
# service/kubernetes   ClusterIP   10.96.0.1       <none>        443/TCP   2d21h
# service/web-svc      ClusterIP   10.105.33.222   <none>        80/TCP    35s

# NAME                          READY   UP-TO-DATE   AVAILABLE   AGE
# deployment.extensions/nginx   2/2     2            2           35s
